# autorma

./: .gitignore  PRE_DEFENSE_CHECKLIST.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ASSETS.md  DEVELOPMENT.md
model-service/: app.py
model_service/: app.py  config.py
models/v1/: training_metadata.json
monitoring/: docker-compose.yml  prometheus.yml
notebooks/: 01_data_preparation.ipynb  01_data_prepartion.ipynb  02_train_model.ipynb  train.ipynb
orchestrator/: batch_inference.py  config.py  metrics_pusher.py  run_batch.sh
scripts/: register_model.py  set_production.py  setup_assets.sh
streamlit-ui/: app.py
