[project]
name = "autorma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.7",
    "mlflow>=3.9.0",
    "python-multipart>=0.0.22",
    "ruff>=0.15.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
